--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ psycopg2==2.6.2
 django-extensions==1.7.4
 django-debug-toolbar==1.6
 django-allauth==0.27.0
+git+https://github.com/alanjds/drf-nested-routers.git@c465fd090402500ed6702398634034e27e29dd4c
