--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ django-extensions==1.7.4
 django-debug-toolbar==1.6
 django-allauth==0.27.0
 git+https://github.com/alanjds/drf-nested-routers.git@c465fd090402500ed6702398634034e27e29dd4c
+sqlparse==0.2.2
+oauthlib==2.0.0
+python-openid==2.2.5
+requests==2.11.1
+requests-oauthlib==0.7.0
+six==1.10.0
