--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-Django==1.10.2
-djangorestframework==3.4.7
-psycopg2==2.6.2
-django-extensions==1.7.4
-django-debug-toolbar==1.6
-django-allauth==0.27.0
-git+https://github.com/alanjds/drf-nested-routers.git@c465fd090402500ed6702398634034e27e29dd4c
-django-redis-cache==1.7.1
-redis==2.10.5
-whitenoise==3.3.0
+defusedxml==0.5.0
 dj-database-url==0.4.2
-gunicorn==19.7.0
+Django==1.10.2
+django-allauth==0.27.0
+django-debug-toolbar==1.6
+django-extensions==1.7.4
+django-redis-cache==1.7.1
+djangorestframework==3.4.7
 gevent==1.2.1
+git+https://github.com/alanjds/drf-nested-routers.git@c465fd090402500ed6702398634034e27e29dd4c
 greenlet==0.4.12
-psycogreen==1.0
-sqlparse==0.2.2
+gunicorn==19.7.0
 oauthlib==2.0.0
-python-openid==2.2.5
+psycogreen==1.0
+psycopg2==2.6.2
+python3-openid==3.1.0
+redis==2.10.5
 requests==2.11.1
 requests-oauthlib==0.7.0
 six==1.10.0
+sqlparse==0.2.2
+whitenoise==3.3.0
