--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 defusedxml==0.5.0
 dj-database-url==0.4.2
-Django==1.10.2
-django-allauth==0.27.0
-django-debug-toolbar==1.6
-django-extensions==1.7.4
+Django==1.10.6
+django-allauth==0.31.0
+django-debug-toolbar==1.7
+django-extensions==1.7.7
 django-redis-cache==1.7.1
-djangorestframework==3.4.7
+djangorestframework==3.6.2
+drf-nested-routers==0.90.0
 gevent==1.2.1
-git+https://github.com/alanjds/drf-nested-routers.git@c465fd090402500ed6702398634034e27e29dd4c
 greenlet==0.4.12
 gunicorn==19.7.0
-oauthlib==2.0.0
+oauthlib==2.0.2
 psycogreen==1.0
-psycopg2==2.6.2
+psycopg2==2.7.1
 python3-openid==3.1.0
 redis==2.10.5
-requests==2.11.1
-requests-oauthlib==0.7.0
+requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
-sqlparse==0.2.2
+sqlparse==0.2.3
 whitenoise==3.3.0
