reflected web app subdirectory location in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ web/src/**/*.js
 !web/src/systemjs.config.extras.js
 !web/src/systemjs.config.js
 !web/src/systemjs-angular-loader.js
-web/*.js.map
 web/e2e/**/*.js
-web/e2e/**/*.js.map
+web/**/*.js.map
 web/_test-output
 web/_temp
