--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.4.2
 Django==1.10.6
 django-allauth==0.31.0
 django-bootstrap-form==3.2.1
+django-db-geventpool==1.21
 django-debug-toolbar==1.7
 django-extensions==1.7.8
 django-redis-cache==1.7.1
