--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-debug-toolbar==1.7
 django-extensions==1.7.8
 django-redis-cache==1.7.1
 djangorestframework==3.6.2
+djangorestframework-jwt==1.10.0
 drf-nested-routers==0.90.0
 gevent==1.2.1
 greenlet==0.4.12
@@ -15,6 +16,7 @@ gunicorn==19.7.1
 oauthlib==2.0.2
 psycogreen==1.0
 psycopg2==2.7.1
+PyJWT==1.4.2
 python3-openid==3.1.0
 redis==2.10.5
 requests==2.13.0
