--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ web/node_modules
 web/aot
 web/src/**/*.js
 web/src/**/*.js.map
-web/boomerang.js
+web/static/web/boomerang.js
 !web/src/systemjs.config.extras.js
 !web/src/systemjs.config.js
 !web/src/systemjs-angular-loader.js
