Revert "renamed to ts to suppress ide errors"
This reverts commit d30fb61b83cb3dbfb6678b601aa9a5422875f9e3.

--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
     "lint": "tslint ./src/**/*.ts -t verbose",
-    "build:aot": "ngc -p tsconfig.json && rollup -c rollup-config.ts"
+    "build:aot": "ngc -p tsconfig.json && rollup -c rollup-config.js"
   },
   "keywords": [],
   "author": "",
