moved js metadata to project root to automate deployment on heroku

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,12 @@
 
 
   "files": [
-    "src/app/app.module.ts",
-    "src/main.ts"
+    "web/src/app/app.module.ts",
+    "web/src/main.ts"
   ],
 
   "angularCompilerOptions": {
-   "genDir": "aot",
+   "genDir": "web/aot",
    "skipMetadataEmit" : true
  }
 }
