--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "boomerang",
-  "version": "1.0.0",
+  "version": "0.6.0",
   "description": "Boomerang Notes",
+  "engines": {
+    "node": "6.10.2",
+    "npm": "4.5.0"
+  },
   "scripts": {
-    "build": "tsc -p src/",
-    "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
+    "build": "tsc -p web/src/",
+    "build:watch": "tsc -p web/src/ -w",
+    "build:e2e": "tsc -p web/e2e/",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
@@ -18,8 +22,9 @@
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "pretest:once": "npm run build",
     "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose",
-    "build:aot": "ngc -p tsconfig.json && rollup -c rollup-config.js"
+    "lint": "tslint web/src/**/*.ts -t verbose",
+    "build:aot": "ngc -p tsconfig.json && rollup -c rollup-config.js",
+    "postinstall": "npm run build:aot && cpx node_modules/core-js/client/shim.min.js web/static/web/node_modules/core-js/client && cpx node_modules/zone.js/dist/zone.min.js web/static/web/node_modules/zone.js/dist"
   },
   "keywords": [],
   "author": "",
@@ -41,7 +46,17 @@
     "zone.js": "^0.8.4",
 
     "angular2-jwt": "0.2.2",
-    "angular2-cookie": "1.2.6"
+    "angular2-cookie": "1.2.6",
+
+    "@angular/compiler-cli": "~4.0.0",
+    "@angular/platform-server": "~4.0.0",
+
+    "rollup": "^0.41.6",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^1.0.2",
+
+    "cpx": "^1.5.0"
   },
   "devDependencies": {
     "concurrently": "^3.2.0",
@@ -61,15 +76,7 @@
     "rimraf": "^2.5.4",
 
     "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36",
-
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
-
-    "rollup": "^0.41.6",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^1.0.2"
+    "@types/jasmine": "2.5.36"
   },
   "repository": {}
 }
