--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 defusedxml==0.5.0
 dj-database-url==0.4.2
-Django==1.10.6
+Django==1.11
 django-allauth==0.32.0
 django-bootstrap-form==3.2.1
 django-db-geventpool==1.21
@@ -16,8 +16,9 @@ gunicorn==19.7.1
 oauthlib==2.0.2
 psycogreen==1.0
 psycopg2==2.7.1
-PyJWT==1.4.2
+PyJWT==1.5.0
 python3-openid==3.1.0
+pytz==2017.2
 redis==2.10.5
 requests==2.13.0
 requests-oauthlib==0.8.0
