--- a/package.json
+++ b/package.json
@@ -29,54 +29,54 @@
   "author": "Victor Semionov <vsemionov@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
 
-    "angular-in-memory-web-api": "~0.3.0",
-    "systemjs": "0.19.40",
+    "angular-in-memory-web-api": "^0.3.2",
+    "systemjs": "^0.20.14",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.8.4",
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.12",
 
-    "angular2-jwt": "~0.2.3",
-    "angular2-cookie": "~1.2.6",
+    "angular2-jwt": "^0.2.3",
+    "angular2-cookie": "^1.2.6",
 
-    "typescript": "~2.1.0",
+    "typescript": "^2.3.4",
 
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/platform-server": "^4.2.4",
 
-    "rollup": "^0.41.6",
+    "rollup": "^0.43.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^1.0.2",
+    "rollup-plugin-uglify": "^2.0.1",
 
     "cpx": "^1.5.0"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
+    "concurrently": "^3.5.0",
+    "lite-server": "^2.3.0",
 
-    "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "canonical-path": "^0.0.2",
+    "tslint": "^5.4.3",
+    "lodash": "^4.17.4",
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
+    "protractor": "^5.1.2",
+    "rimraf": "^2.6.1",
 
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "@types/node": "^8.0.3",
+    "@types/jasmine": "^2.5.53"
   },
   "repository": {}
 }
