--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2017.7.27.1
 chardet==3.0.4
+contextlib2==0.5.5
 defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11.4
@@ -22,6 +23,7 @@ psycopg2==2.7.3
 PyJWT==1.5.2
 python3-openid==3.1.0
 pytz==2017.2
+raven==6.1.0
 redis==2.10.5
 requests==2.18.3
 requests-oauthlib==0.8.0
