--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
   - "3.6"
 
+services:
+  - postgresql
+
 install: "pip install -r requirements.txt"
 
 script: ./manage.py test
