--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ services:
 
 install: "pip install -r requirements.txt"
 
-script: ./manage.py test
+script:
+  - coverage run manage.py test
+  - coverage report
