--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2017.7.27.1
 chardet==3.0.4
 contextlib2==0.5.5
+coverage==4.4.1
 defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11.4
