--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-bootstrap-form==3.3
 django-cors-headers==2.1.0
 django-debug-toolbar==1.8
 django-extensions==1.8.1
-django-redis-cache==1.7.1
+django-redis==4.8.0
 djangorestframework==3.6.4
 djangorestframework-jwt==1.11.0
 drf-nested-routers==0.90.0
