--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ services:
 
 install: "pip install -r requirements.txt"
 
+cache: pip
+
 script:
   - coverage run manage.py test
   - coverage report
