--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ services:
   - postgresql
   - redis-server
 
-install: "pip install -r requirements.txt"
+install:
+  - pip install -r requirements.txt
+  - pip install coverage
 
 cache: pip
 
