--- a/rest_fuzzysearch_pkg/.travis.yml
+++ b/rest_fuzzysearch_pkg/.travis.yml
@@ -9,12 +9,15 @@ addons:
 services:
   - postgresql
 
-install: "pip install -r requirements.txt"
+install:
+  - pip install .
+  - pip install -r example/requirements.txt
+  - pip install coverage
 
 cache: pip
 
 before_script:
-  - psql -U postgres -c 'create database rest_fuzzy;'
+  - psql -U postgres -c 'create database rest_fuzzysearch;'
 
 script:
   - coverage run example/manage.py test
