--- a/rest_offlinesync_pkg/.travis.yml
+++ b/rest_offlinesync_pkg/.travis.yml
@@ -3,7 +3,10 @@ language: python
 python:
   - "3.6"
 
-install: "pip install -r requirements.txt"
+install:
+  - pip install .
+  - pip install -r example/requirements.txt
+  - pip install coverage
 
 cache: pip
 
